# solarium_1

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig.projbuild  PINOUT.xlsx  PINOUT_mcp.xlsx  README.md  partitions.csv  pinout_recovered.xlsx  sdkconfig  sdkconfig.old
components/abp/: CMakeLists.txt  abp.c  abp.h
components/ads1115_helper/: CMakeLists.txt  ads1115_helper.c  ads1115_helper.h
components/as5600/: CMakeLists.txt  as5600.c  as5600.h
components/core/fluctus/: CMakeLists.txt  README.md  fluctus.c  fluctus.h  fluctus_accumulator.c  fluctus_power_bus.c  fluctus_power_monitor.c  fluctus_private.h  fluctus_solar_tracking.c  fluctus_thermal.c
components/core/hmi/: CMakeLists.txt  README.md  hmi.c  hmi.h  hmi_display.c  hmi_navigation.c  hmi_navigation.h  hmi_private.h  hmi_render_fluctus.c  hmi_render_impluvium.c  hmi_render_system.c  hmi_render_tempesta.c
components/core/impluvium/: CMakeLists.txt  Kconfig  LEARNING_ALGORITHM.md  README.md  impluvium.c  impluvium.h  impluvium_actuators.c  impluvium_learning.c  impluvium_private.h  impluvium_safety.c  impluvium_safety_monitor.c  impluvium_sensors.c  impluvium_state_machine.c  impluvium_storage.c
components/core/stellaria/: README.md  stellaria.c  stellaria.h
components/core/telemetry/: CMakeLists.txt  Kconfig  README.md  telemetry.c  telemetry.h  telemetry_cache.c  telemetry_commands.c  telemetry_mqtt_buffer.c  telemetry_mqtt_client.c  telemetry_msgpack.c  telemetry_private.h
components/core/tempesta/: CMakeLists.txt  README.md  tempesta.c  tempesta.h  tempesta_accumulator.c  tempesta_private.h  tempesta_processing.c  tempesta_sensors.c  tempesta_wind.c
components/custom_drivers/: README.md
components/custom_drivers/abp/: CMakeLists.txt  README.md  abp.c  abp.h  abp_example.c
components/custom_drivers/as5600/: as5600.c  as5600_example.c
components/custom_drivers/i2cdev/: CMakeLists.txt  Kconfig  i2cdev.c  i2cdev.h
components/custom_drivers/mcp23008/: MODIFICATIONS.md  mcp23008.c  mcp23008.h
components/fluctus/: CMakeLists.txt  fluctus.c  fluctus.h
components/helpers/abp/: abp.c  abp.h
components/helpers/ads1115_helper/: CMakeLists.txt  README.md  ads1115_helper.c  ads1115_helper.h
components/helpers/as5600/: CMakeLists.txt  as5600.c  as5600.h  as5600_example.c
components/helpers/interval_config/: CMakeLists.txt  README.md  interval_config.c  interval_config.h
components/helpers/mcp23008_helper/: CMakeLists.txt  README.md  mcp23008_helper.c  mcp23008_helper.h
components/helpers/solar_calc/: CMakeLists.txt  README.md  solar_calc.c  solar_calc.h
components/helpers/wifi_helper/: CMakeLists.txt  README.md  wifi_helper.c  wifi_helper.h
components/hmi/: CMakeLists.txt  hmi.c  hmi.h
components/ina219/: ina219.c
components/irrigation/: CMakeLists.txt  impluvium_learning_algorithm.md  irrigation.c  irrigation.h
components/stellaria/: CMakeLists.txt  stellaria.c  stellaria.h
components/telemetry/: CMakeLists.txt  solar_calc.c  solar_calc.h  telemetry.c  telemetry.h
components/weather_station/: CMakeLists.txt  weather_station.c  weather_station.h
logs/: .gitkeep
main/: CMakeLists.txt  idf_component.yml  main.c  main.h
