idf_component_register(
    SRCS
        "telemetry.c"
        "telemetry_cache.c"
        "telemetry_mqtt_buffer.c"
        "telemetry_msgpack.c"
        "telemetry_mqtt_client.c"
        "telemetry_commands.c"
    INCLUDE_DIRS
        "." 
    REQUIRES
        esp_timer
        nvs_flash
        littlefs
        msgpack
        mqtt
        stellaria
        fluctus
        tempesta
        impluvium
        wifi_helper
        solar_calc
        interval_config
)
